# CursoNaoqi

./: CMakeLists.txt  README.md  head.cpp  move.cpp  qiproject.xml  say.cpp
